# claudecode-discord-presence

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
claudecode_discord_presence/: __init__.py  hook.py  main.py
tests/: test_main.py
